<resources>
    <string name="app_name">Design1</string>
    <string name="filters">Filters</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="year">Year</string>
    <string name="engine_hours">Engine Hours</string>
    <string name="has_warranty">Has Warranty?</string>
    <string name="search_radius">Search Radius</string>
    <string name="engine_type">Engine Type</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="boat_color">Boat Color</string>
    <string name="location">Location</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="services">Services</string>
    <string name="boatzon_services">Boatzon Services</string>
    <string name="clearwater_fl_33759">Clearwater, FL 33759</string>
    <string name="_2600_mccormick_drive">2600 McCormick Drive</string>
    <string name="get_directions">Get Directions</string>
    <string name="marine_trader_inc">Marine Trader, Inc</string>
    <string name="ask">Ask</string>
    <string name="make_offer">Make Offer</string>
    <string name="call">Call</string>
    <string name="get_pre_approved">Get Pre-Approved</string>
    <string name="_732_est_monthly">$732 / Est. Monthly</string>
    <string name="_2019_ocean_alexander_120_megayacht">2019 Ocean Alexander 120 Megayacht</string>
    <string name="long_yacht">Long Yacht</string>
    <string name="month">$ / MONTH</string>
    <string name="_732">$ 732</string>
    <string name="apr">APR</string>
    <string name="_5_9">5.9 %</string>
    <string name="down">$ DOWN</string>
    <string name="_0">$ 0</string>
    <string name="term">TERM</string>
    <string name="_69">69</string>
    <string name="_130_000">$ 130,000</string>
    <string name="gopi">Gopi</string>
    <string name="finance">Finance</string>
    <string name="price">Price</string>
    <string name="cash_down">Cash Down</string>
    <string name="_150_000">$ 150000</string>
    <string name="_6000">$ 6000</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="you_pre_qualification_terms_expired_get_pre_qualified_again_to_see_your_current_terms">You pre-qualification terms expired. Get pre-qualified again to see your current terms.</string>
    <string name="boatzon_offers_financing">Boatzon Offers Financing</string>
    <string name="all">All</string>
    <string name="_new">New</string>
    <string name="used">Used</string>
    <string name="_503_items">503 Items</string>
    <string name="sort_by">Sort by:</string>
    <string name="get_pre_approved_now">Get Pre-Approved Now</string>
    <string name="in_2_minutes_and_view_personalized_monthly_payments_for_our_inventory_of_new_engines">in 2 minutes and view personalized monthly payments for our inventory of new engines</string>
    <string name="more_filters">More Filters</string>
    <string name="_2021_torqeedo_cruise_10_0_txl">2021 Torqeedo Cruise 10.0 TXL</string>
    <string name="fort_lauderdale_fl">Fort Lauderdale, FL</string>
    <string name="_9_599">$ 9,599</string>
    <string name="est_450_mo">Est. $450/mo</string>
    <string name="cash_down_price">$ %1$d</string>
</resources>