<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/boat_location"
        android:icon="@drawable/ic_location"
        android:title="@string/location"
        app:showAsAction="always" />

    <item
        android:id="@+id/boat_like"
        android:icon="@drawable/ic_like"
        android:title="@string/like"
        app:showAsAction="always" />

    <item
        android:id="@+id/boat_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/boat_settings"
        android:title="@string/services"
        app:showAsAction="collapseActionView" />
</menu>